[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opendbc"
version = "1.0.0"
description = "CAN bus databases, tools, and car APIs"
license = {file = "LICENSE"}
authors = [{ name="Vehicle Researcher", email="user@comma.ai" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "ruff",
  "Cython",
  "Jinja2",
  "numpy",
  "pycapnp",
  "pyyaml",
  "scons",
  "pytest",
  "pytest-xdist",
  "pytest-subtests",
]

[project.urls]
homepage = "https://github.com/commaai/opendbc"

[tool.cython-lint]
max-line-length = 120
ignore = ["E111", "E114"]

[tool.mypy]
explicit_package_bases=true

# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF100", "A"]
ignore = ["W292", "E741", "E402", "C408", "ISC003"]
line-length = 160
target-version="py311"
flake8-implicit-str-concat.allow-multiline=false
